--- a/searchlist.html
+++ b/searchlist.html
@@ -6,48 +6,55 @@
   <title>Searchable Countries List</title>
   <style>
     body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #f0f0f0;
-}
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f0f0f0;
+    }
 
-.search-container {
-  width: 300px;
-}
+    .search-container {
+      position: relative; /* Position container relatively */
+      width: 300px;
+    }
 
-#search {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
+    #search {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
 
-#country-list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  max-height: 200px;
-  overflow-y: auto;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
+    #country-list {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      max-height: 200px;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      position: absolute; /* Position list absolutely */
+      top: 100%; /* Position below the input field */
+      left: 0;
+      right: 0;
+      display: none; /* Hidden by default */
+      z-index: 10; /* Ensure it appears above other content */
+    }
 
-#country-list li {
-  padding: 10px;
-  border-bottom: 1px solid #eee;
-}
+    #country-list li {
+      padding: 10px;
+      border-bottom: 1px solid #eee;
+    }
 
-#country-list li:hover {
-  background-color: #007bff;
-  color: white;
-  cursor: pointer;
-}
+    #country-list li:hover {
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
